Fixed alignment

--- a/style.css
+++ b/style.css
@@ -9,11 +9,12 @@ body {
 }
 
 img {
-    margin-top: 75px;
-    margin-left: 50px;
+    display: block;
+    margin: auto;
 	border: 0px;
     opacity: 0.3;
     filter:alpha(opacity=30);
+    margin-bottom: 100px;
 }
 
 a:link { 
@@ -34,27 +35,6 @@ a:hover, a:active {
 	text-decoration: underline;
 }
 
-#header {
-	height:337px;
-	display:block;
-	width:570px;
-	margin-right:0px;
-	background-image: url(images/hilaryduff.jpg);
-	background-repeat: no-repeat;
-	background-position: right top;
-	z-index:2;
-	overflow:hidden;
-}
-#header a {
-	position:absolute;
-	top:322px;
-	right:48px;
-	width:50px;
-	height:20px;
-	z-index:3;
-	display:inline;
-}
-
 #container {
 	margin: 0px auto;
 	text-align: left;
@@ -62,68 +42,10 @@ a:hover, a:active {
 	position:relative;
 }
 
-#copyright {
-	clear: both;
-	color: #FFFFFF;
-	font-size: 10px;
-	margin-bottom: 10px;
-	padding-right: 15px;
-	text-align: center;	
-}
-
-.photo {
-	float: right;
-	margin-left: 10px;
-	margin-right: 10px;
-	padding:5px;
-	border: 1px solid #ca738f;	
-}
-.photo img{
-	border: 1px solid #df8fa9;
-}
-#left {
-	float: left;
-	padding-top: 110px;
-	width: 210px;
-}
-
-#menu {
-	background: url(images/menu-bg.gif) no-repeat;
-	clear: both;
-	display: block;
-	height: 551px;
-	padding-top: 10px;
-	width: 190px;
-}
-
-#menu ul {
-	list-style: none;
-	margin: 0px;
-	margin-left: 4px;
-	margin-bottom: 10px;
-	margin-top: 8px;
-	padding: 0px;
-}
-
-#menu li {
-	background: url(images/list-bg.gif) no-repeat;
-	display: block;
-	font-size: 10px;
-	height: 17px;
-	list-style: none;
-	margin: 0px;
-	padding: 0px;
-	padding-left: 25px;
-	padding-top: 1px;
-	width: 157px;
-}
-
 #nav {
-	clear: both;
 	height: 50px;
 	width: 700px;
-	position:absolute;
-	margin-left:40px;
+    margin: auto;
 }
 
 #nav ul {
@@ -138,12 +60,12 @@ a:hover, a:active {
 
 #nav li {
 	list-style: none;
-	float:left;
 	margin: 0px;
 	padding: 0px;
 	display:inline;
 	border-right: 1px solid #c0617f;
 }
+
 #nav a {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 14px;
@@ -155,48 +77,10 @@ a:hover, a:active {
 	text-transform: uppercase;
 	padding: 20px 20px 10px 20px;
 }
+
 #nav a:hover {
 	color:#df8fa9;
 	text-decoration:underline;
-}
-
-#right {
-	float: left;
-	width: 560px;
-}
-#right a{
-text-decoration:underline;}
-.tab {
-	background: url(images/tab-heading.gif) no-repeat;
-	color: #F2BCCE;
-	display: block;
-	font-family: arial;
-	font-size: 15px;
-	font-weight: bold;
-	height: 18px;
-	letter-spacing: -1px;
-	padding-left: 10px;
-	padding-top: 3px;
-	margin-bottom: 8px;
-	margin-left: 7px;
-	width: 166px;
-}
-
-.tab2 {
-	background: url(images/tab-bg.gif) no-repeat;
-	display: block;
-	font-size: 10px;
-	height: 17px;
-	padding-top: 4px;
-	padding-left: 10px;
-	width: 179px;
-}
-
-.tag {
-	color: #F5E6EB;
-	font-size: 12px;
-	font-weight: bold;
-	margin-left: 25px;	
 }
 
 .textboxtop,.textboxtop2{
@@ -206,15 +90,17 @@ text-decoration:underline;}
 	font-weight: bold;
 	height: 33px;
 	letter-spacing: -1px;
-	margin-left: 8px;
+	margin: auto;
 	padding-left: 20px;
 	padding-top: 11px;
 	width: 526px;
 	text-transform: uppercase;
 }
-.textboxtop{
+
+.textboxtop {
 	background: url(images/textbox-top.gif) no-repeat;
 }
+
 .textboxtop2 {
 	background: url(images/textbox-top2.gif) no-repeat;
 }
@@ -224,7 +110,7 @@ text-decoration:underline;}
 	border-left: 1px solid #DF8FA9;
 	border-right: 1px solid #DF8FA9;
 	color: #F0C5D2;
-	margin-left: 8px;
+	margin: auto;
 	padding-left: 20px;
 	padding-right: 10px;
 	padding-top: 20px;
@@ -240,15 +126,17 @@ text-decoration:underline;}
 	font-weight: bold;
 	height: 23px;
 	margin-bottom: 10px;
-	margin-left: 8px;
+	margin: auto;
 	padding-right: 15px;
 	padding-top: 5px;
 	text-align: right;
 	width: 531px;
 }
-.lastnav{
+
+.lastnav {
 	border-right: 0px none #c0617f !important;
 }
-.lastitem{
+
+.lastitem {
 	background:url(images/list-bg-2.gif) !important;
 }
